Bug 1270651 - fix deletion of AB cards after search. r=rkent